# Agnostos

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
agents/: __init__.py  judge.py  profiler.py  scientist.py
client/: app.js  app.jsx  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: main.jsx
database/: base.py  models.py  session.py
graph/: __init__.py  state.py  workflow.py
server/: app.py  main.py  migrate.py  pyproject.toml  requirements.txt
server/agents/: judge.py  scientist.py
server/database/: init_db.py  models.py
server/graph/: workflow.py
server/tools/: __init__.py  executor.py  stats.py  vision.py
server/utils/: config.py
tests/: test_judge.py  test_profiler.py  test_scientist.py
tools/: executor.py  stats.py  vision.py
utils/: config.py
